k8s/lab-webhook.yaml

#### service
apiVersion: v1
kind: Service
metadata:
  name: svc-lab-webhook
  labels:
    app: svc-lab-webhook
spec:
  externalTrafficPolicy: Local
  selector:
    app: lab-webook
  ports:
    - name: internal-service-alinlab-webhook-app
      port: 8090          # 服务访问端口
      targetPort: 14001       # 容器端口
      nodePort: 30007      # NodePort
  type: NodePort
