k8s/site-db.yaml
#### service
apiVersion: v1
kind: Service
metadata:
  name: sitedb-srv
  labels:
    app: db
spec:
  externalTrafficPolicy: Local
  selector:
    app: db
  ports:
    - name: db-service
      port: 5432
      targetPort: 5432
      nodePort: 30001 # 可以通过所在node的IP来访问
  type: NodePort
