k8s/site-jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  externalTrafficPolicy: Local
  selector:
    app: jaeger
  ports:
    - name: otel-collector-grpc 
      port: 4317
      targetPort: 4317
      nodePort: 31002 # 可以通过所在node的IP来访问
    # - name: otel-collector-http 
    #   port: 4318
    #   targetPort: 4318
    #   nodePort: 31003 # 可以通过所在node的IP来访问
    - name: jaeger-collector-grpc 
      port: 14250
      targetPort: 14250
      nodePort: 31001 # 可以通过所在node的IP来访问
    - name: jaeger-srv-dashboard
      port: 16686
      targetPort: 16686
      nodePort: 31000 # 可以通过所在node的IP来访问
  type: NodePort
