k8s/site-oldbackend.yaml
#### service
apiVersion: v1
kind: Service
metadata:
  name:  svc-site-oldbackend
  labels:
    app: svc-site-oldbackend
spec:
  selector:
    app: site-oldbackend
  ports:
    - name: internal-service-django-rest
      port: 8000          # 服务访问端口
      targetPort: 8000       # 容器端口
      nodePort: 30010     # NodePort

    - name: internal-service-django-grpc
      port: 50001          # 服务访问端口
      targetPort: 50001       # 容器端口
      nodePort: 30022     # NodePort
  type: NodePort
