k8s/site-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
  labels:
    app: rabbit
spec:
  externalTrafficPolicy: Local
  selector:
    app: rabbit
  ports:
    - name: rabbitmq-srv-client
      port: 5672
      targetPort: 5672
      nodePort: 30003 # 可以通过所在node的IP来访问
    - name: rabbitmq-srv-management
      port: 15672
      targetPort: 15672
      nodePort: 30004 # 可以通过所在node的IP来访问
  type: NodePort
