k8s/site-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-srv
  labels:
    app: redis
spec:
  externalTrafficPolicy: Local
  selector:
    app: redis
  ports:
    - name: redis-service
      port: 6379
      targetPort: 6379
      nodePort: 30000 # 可以通过所在node的IP来访问
  type: NodePort
