k8s/usercenter.yaml

#### service
apiVersion: v1
kind: Service
metadata:
  name: svc-usercenter
  labels:
    app: svc-usercenter
spec:
  externalTrafficPolicy: Local
  selector:
    app: site-usercenter
  ports:
    - name: internal-service-usercenter-app
      port: 8080          # 服务访问端口
      targetPort: 8080       # 容器端口
      nodePort: 30006      # NodePort
      
    - name: internal-service-usercenter-app-rpc
      port: 8081          # SERVER监听的端口
      targetPort: 8081       # POD 监听的端口,从SEVER获取的请求会转发到这个端口
      nodePort: 31006      # NodePort 当服务类型为 NodePort 或 LoadBalancer 时使用。
                          # 它是在每个节点上开放的端口，外部流量可以通过这个端口访问集群内的服务。

  type: NodePort
