k8s/lab-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: lab.webhook.ingress
  annotations:
    nginx.ingress.kubernetes.io/opentelemetry-operation-name: "lab.webhook"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/opentelemetry-trust-incoming-span: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        auth_request /token/validate;
        auth_request_set $user_id $upstream_http_x_forwarded_user;
        proxy_set_header X-User $user_id;   
        set $dummy_val "$opentelemetry_context_traceparent";   
spec:
  rules:
  - http:
      paths:
      - path:  /webhook
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-lab-webhook
            port:
              number: 8090         
  ingressClassName: nginx 
  tls:
  - hosts:
    - weridolin.cn
    secretName: site-tls
