k8s/oldbackend-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: oldbackend-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /usercenter/$1
    nginx.ingress.kubernetes.io/opentelemetry-operation-name: "oldbackendApiCall"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/opentelemetry-trust-incoming-span: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        auth_request /token/validate;
        auth_request_set $user_id $upstream_http_x_forwarded_user;
        proxy_set_header X-User $user_id;     
        set $dummy_val "$opentelemetry_context_traceparent";

spec:
  rules:
  - http:
      paths:
      - path:  /(apiCollector|blog|chatGPT|home|covid19|dataFaker|fileBroker|drug|shortUrl|gpt)
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-site-oldbackend
            port:
              number: 8000  
        
  ingressClassName: nginx 
  tls:
  - hosts:
    - weridolin.cn
    secretName: site-tls
