k8s/site-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path:  /rabbit/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: rabbitmq-srv
            port:
              number: 15672
  ingressClassName: nginx 
  tls:
  - hosts:
    - weridolin.cn
    secretName: site-tls
