k8s/site-wsserver.yaml
#### service
apiVersion: v1
kind: Service
metadata:
  name:  svc-site-wsserver
  labels:
    app: svc-site-wsserver
spec:
  selector:
    app: site-wsserver
  ports:
    - name: internal-wsserver-app
      port: 8001          # 服务访问端口
      targetPort: 8001       # 容器端口
      nodePort: 30011    # NodePort
  type: NodePort

---
### wss server ingress
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: wsserver-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /usercenter/$1
    nginx.ingress.kubernetes.io/opentelemetry-operation-name: "wsserver.processRequest"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/opentelemetry-trust-incoming-span: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        auth_request /token/validate;
        auth_request_set $user_id $upstream_http_x_forwarded_user;
        proxy_set_header X-User $user_id;     
        set $dummy_val "$opentelemetry_context_traceparent";

spec:
  rules:
  - http:
      paths:
      - path: /ws-endpoint
        pathType: Prefix
        backend:
          service:
            name: svc-site-wsserver
            port:
              number: 8001
        
  ingressClassName: nginx 
  tls:
  - hosts:
    - weridolin.cn
    secretName: site-tls
